src/include/yices.h


__YICES_DLLSPEC__ extern void yices_set_out_of_mem_callback(void (*callback)(void));
__YICES_DLLSPEC__ extern int32_t yices_decref_term(term_t t);
__YICES_DLLSPEC__ extern int32_t yices_incref_type(type_t tau);
__YICES_DLLSPEC__ extern int32_t yices_decref_type(type_t tau);
__YICES_DLLSPEC__ extern uint32_t yices_num_posref_terms(void);
__YICES_DLLSPEC__ extern uint32_t yices_num_posref_types(void);
__YICES_DLLSPEC__ extern void yices_garbage_collect(const term_t t[], uint32_t nt,
                                                    const type_t tau[], uint32_t ntau,
                                                    int32_t keep_named);
__YICES_DLLSPEC__ extern ctx_config_t *yices_new_config(void);
__YICES_DLLSPEC__ extern void yices_free_config(ctx_config_t *config);
__YICES_DLLSPEC__ extern int32_t yices_set_config(ctx_config_t *config, const char *name, const char *value);
__YICES_DLLSPEC__ extern int32_t yices_default_config_for_logic(ctx_config_t *config, const char *logic);
__YICES_DLLSPEC__ extern context_t *yices_new_context(const ctx_config_t *config);
__YICES_DLLSPEC__ extern void yices_free_context(context_t *ctx);
__YICES_DLLSPEC__ extern smt_status_t yices_context_status(context_t *ctx);
__YICES_DLLSPEC__ extern void yices_reset_context(context_t *ctx);
__YICES_DLLSPEC__ extern int32_t yices_push(context_t *ctx);
__YICES_DLLSPEC__ extern int32_t yices_pop(context_t *ctx);
__YICES_DLLSPEC__ extern int32_t yices_context_enable_option(context_t *ctx, const char *option);
__YICES_DLLSPEC__ extern int32_t yices_context_disable_option(context_t *ctx, const char *option);
__YICES_DLLSPEC__ extern int32_t yices_assert_formula(context_t *ctx, term_t t);
__YICES_DLLSPEC__ extern int32_t yices_assert_formulas(context_t *ctx, uint32_t n, const term_t t[]);
__YICES_DLLSPEC__ extern smt_status_t yices_check_context(context_t *ctx, const param_t *params);
__YICES_DLLSPEC__ extern int32_t yices_assert_blocking_clause(context_t *ctx);
__YICES_DLLSPEC__ extern void yices_stop_search(context_t *ctx);
__YICES_DLLSPEC__ extern param_t *yices_new_param_record(void);
__YICES_DLLSPEC__ extern void yices_default_params_for_context(context_t *ctx, param_t *params);
__YICES_DLLSPEC__ extern int32_t yices_set_param(param_t *p, const char *pname, const char *value);
__YICES_DLLSPEC__ extern void yices_free_param_record(param_t *param);
__YICES_DLLSPEC__ extern model_t *yices_get_model(context_t *ctx, int32_t keep_subst);
__YICES_DLLSPEC__ extern void yices_free_model(model_t *mdl);
__YICES_DLLSPEC__ extern model_t *yices_model_from_map(uint32_t n, const term_t var[], const term_t map[]);
__YICES_DLLSPEC__ extern int32_t yices_get_bool_value(model_t *mdl, term_t t, int32_t *val);
__YICES_DLLSPEC__ extern int32_t yices_get_int32_value(model_t *mdl, term_t t, int32_t *val);
__YICES_DLLSPEC__ extern int32_t yices_get_int64_value(model_t *mdl, term_t t, int64_t *val);
__YICES_DLLSPEC__ extern int32_t yices_get_rational32_value(model_t *mdl, term_t t, int32_t *num, uint32_t *den);
__YICES_DLLSPEC__ extern int32_t yices_get_rational64_value(model_t *mdl, term_t t, int64_t *num, uint64_t *den);
__YICES_DLLSPEC__ extern int32_t yices_get_double_value(model_t *mdl, term_t t, double *val);
__YICES_DLLSPEC__ extern int32_t yices_get_mpz_value(model_t *mdl, term_t t, mpz_t val);
__YICES_DLLSPEC__ extern int32_t yices_get_mpq_value(model_t *mdl, term_t t, mpq_t val);
__YICES_DLLSPEC__ extern int32_t yices_get_algebraic_number_value(model_t *mdl, term_t t, lp_algebraic_number_t *a);
__YICES_DLLSPEC__ extern int32_t yices_get_bv_value(model_t *mdl, term_t t, int32_t val[]);
__YICES_DLLSPEC__ extern int32_t yices_get_scalar_value(model_t *mdl, term_t t, int32_t *val);
__YICES_DLLSPEC__ extern void yices_init_yval_vector(yval_vector_t *v);
__YICES_DLLSPEC__ extern void yices_delete_yval_vector(yval_vector_t *v);
__YICES_DLLSPEC__ extern void yices_reset_yval_vector(yval_vector_t *v);
__YICES_DLLSPEC__ extern int32_t yices_get_value(model_t *mdl, term_t t, yval_t *val);