src/include/yices_types.h


typedef int32_t term_t;
typedef int32_t type_t;
typedef struct context_s context_t;
typedef struct model_s model_t;
typedef struct ctx_config_s ctx_config_t;
typedef struct param_s param_t;
typedef enum smt_status {
  YICES_STATUS_IDLE,
  YICES_STATUS_SEARCHING,
  YICES_STATUS_UNKNOWN,
  YICES_STATUS_SAT,
  YICES_STATUS_UNSAT,
  YICES_STATUS_INTERRUPTED, 
  YICES_STATUS_ERROR
} smt_status_t;
typedef enum yval_tag {
  YVAL_UNKNOWN,
  YVAL_BOOL,
  YVAL_RATIONAL,
  YVAL_ALGEBRAIC,
  YVAL_FINITEFIELD,
  YVAL_BV,
  YVAL_SCALAR,
  YVAL_TUPLE,
  YVAL_FUNCTION,
  YVAL_MAPPING
} yval_tag_t;
typedef struct yval_s {
  int32_t node_id;
  yval_tag_t node_tag;
} yval_t;
typedef struct yval_vector_s {
  uint32_t capacity;
  uint32_t size;
  yval_t *data;
} yval_vector_t;